syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy";
option java_outer_classname = "PixGrpc";
option objc_class_prefix = "HLW";

package br.com.zupacademy;

import "google/protobuf/timestamp.proto";

service PixKeyService {
  rpc generateKey (KeyRequest) returns (KeyResponse) {}
}

service DeleteKeyService {
  rpc deleteKey (DeleteKeyRequest) returns (DeleteKeyResponse) {}
}

service DetailsKeyService {
  rpc keyDetail (KeyDetailRequest) returns (KeyDetailResponse) {}
}

service AllKeysService {
  rpc findAll (FindAllKeysRequest) returns (FindAllKeysResponse) {}
}

message ErroDetails {
  int32 code = 1;
  string mensagem = 2;
}

enum KeyType {
  UNKNOWN_KEY = 0;
  CPF = 1;
  EMAIL = 2;
  PHONE = 3;
  RANDOM = 4;
}

enum AccountType {
  UNKNOWN_ACCOUNT = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message KeyRequest {
  KeyType keyType = 1;
  AccountType accountType = 2;
  string clientId = 3;
  string key = 4;
}

message KeyResponse {
  string pixId = 1;
}

message DeleteKeyRequest {
  string pixId = 1;
  string clientId = 2;
}

message DeleteKeyResponse {
  string pixId = 1;
}

message KeyDetailRequest {
  message PixIdAndClientId {
    string clientId = 1;
    string pixId = 2;
  }

  oneof filter {
    PixIdAndClientId pixId = 1;
    string key = 2;
  }
}

message KeyDetailResponse {

  message Account {
    AccountType accountType = 1;
    string ownerName = 2;
    string ownerCpf = 3;
    string branch = 4;
    string number = 6;
    string participant = 7;
  }

  KeyType keyType = 1;
  string key = 2;
  Account account = 3;
  google.protobuf.Timestamp createdAt = 4;
  string clientId = 5;
  string pixId = 6;
}

message FindAllKeysRequest {
  string clientId = 1;
}

message FindAllKeysResponse {
  message Key {
    KeyType keyType = 1;
    AccountType accountType = 2;
    string pixId = 3;
    string key = 4;
    string clientId = 5;
    google.protobuf.Timestamp createdAt = 6;
  }

  repeated Key keys = 1;
}